# sheets-diff-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-executable.yaml  release.yml
src/: lib.rs  main.rs
src/core/: diff.rs  mod.rs  unified_format.rs  utils.rs
tests/: tests.rs
tests/fixtures/: file1.xlsx  file2.xlsx
tests/local/: README.md
